GL/Projet_GL/src/test/deca/syntax/invalid/sansObjet/fichier_1.decah
#include "fichier_2.decah"

{

}